[gd_scene load_steps=10 format=3 uid="uid://b3uvsvem0m5ln"]

[ext_resource type="Texture2D" uid="uid://d4ehidfubbijj" path="res://Sprites/space.png" id="1_rqyy2"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_uoiat"]
[ext_resource type="FontFile" uid="uid://rl8rt4fgrhtp" path="res://Fonts/cubic/cubic.ttf" id="2_fc7oa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_in1jd"]
bg_color = Color(1, 1, 1, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22vbu"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctyak"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r811e"]
bg_color = Color(1, 1, 1, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8ejk"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcorr"]
bg_color = Color(1, 1, 1, 0)

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uoiat")

[node name="AnotherHim" type="Sprite2D" parent="."]
self_modulate = Color(0.556953, 0.556953, 0.556953, 1)
position = Vector2(825.33, 501.5)
scale = Vector2(0.885417, 0.949074)
texture = ExtResource("1_rqyy2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -66.5
offset_right = 202.5
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fc7oa")
theme_override_font_sizes/font_size = 70
text = "METEORA"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_top = 560.0
offset_right = 1000.0
offset_bottom = 940.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="playButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fc7oa")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_in1jd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_22vbu")
theme_override_styles/normal = SubResource("StyleBoxFlat_ctyak")
text = "PLAY"

[node name="tutorialButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fc7oa")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_r811e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m8ejk")
theme_override_styles/normal = SubResource("StyleBoxFlat_pcorr")
text = "tutorial"

[node name="settingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fc7oa")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_r811e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m8ejk")
theme_override_styles/normal = SubResource("StyleBoxFlat_pcorr")
text = "SETTINGS"

[node name="quitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fc7oa")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_r811e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m8ejk")
theme_override_styles/normal = SubResource("StyleBoxFlat_pcorr")
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/tutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
